2001-07-12  Michael Livshin  <mlivshin@bigfoot.com>

	* strings.c (s_scm_string): fix arg position in assert.

2001-07-11  Gary Houston  <ghouston@arglist.com>

	* strports.c (st_write): use memcpy, not strncpy.  thanks to
	Dale P. Smith.

2001-07-09  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* alist.c, alloca.c, arbiters.c, async.c, async.h, backtrace.c,
	boolean.c, chars.c, continuations.c, coop-defs.h, coop-threads.c,
	debug-malloc.h, debug.c, debug.h, dynl.c, dynwind.c, eq.c,
	error.c, eval.c, evalext.c, feature.c, feature.h, filesys.c,
	filesys.h, fluids.c, fluids.h, fports.c, fports.h, gc.c, gc.h,
	gdbint.c, gsubr.c, guardians.c, hash.c, hashtab.c, hooks.c,
	hooks.h, inet_aton.c, init.c, ioext.c, keywords.c, keywords.h,
	lang.c, list.c, load.c, macros.c, mallocs.c, memmove.c, modules.c,
	net_db.c, numbers.c, numbers.h, objects.c, objprop.c, options.c,
	pairs.c, pairs.h, ports.c, ports.h, posix.c, print.c, print.h,
	procprop.c, procs.c, procs.h, properties.c, putenv.c, ramap.c,
	random.c, random.h, read.c, regex-posix.c, regex-posix.h, root.c,
	root.h, scmsigs.c, script.c, simpos.c, smob.c, snarf.h, socket.c,
	sort.c, srcprop.c, srcprop.h, stackchk.c, stacks.c, stacks.h,
	stime.c, strerror.c, strings.c, strings.h, strop.c, strorder.c,
	strports.c, struct.c, struct.h, symbols-deprecated.c, symbols.c,
	symbols.h, tags.h, threads.c, threads.h, throw.c, unif.c, unif.h,
	variable.c, variable.h, vectors.c, vectors.h, version.c, vports.c,
	weaks.c, weaks.h: Remove "face-lift" comment.

2001-07-08  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: add stamp-h.in.

2001-07-04  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* hooks.c (scm_make_hook, scm_add_hook_x),
	(scm_remove_hook_x, scm_reset_hook_x, scm_run_hook): Added return
	value info to the docstrings.

2001-07-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	Some more compatibility patches for Windows.

	* posix.c (getlogin): getlogin() implementation for Windows.
