@@ -515,7 +515,7 @@ fport_print (SCM exp, SCM port, scm_print_state *pstate SCM_UNUSED)
     {
       scm_puts (SCM_PTOBNAME (SCM_PTOBNUM (exp)), port);
       scm_putc (' ', port);
-      scm_intprint (SCM_UNPACK (SCM_CDR (exp)), 16, port);
+      scm_intprint ((scm_t_bits) SCM_PTAB_ENTRY (exp), 16, port);
     }
   scm_putc ('>', port);
   return 1;
